realignment of images

--- a/src/styles/List.css
+++ b/src/styles/List.css
@@ -11,9 +11,6 @@
   overflow: hidden;
   text-align: center;
 }
-/* .card > .img-container > img {
-  width: 60%
-} */
 
 .card > .content {
   padding-left: 1rem;
@@ -40,4 +37,8 @@
 
 .card > .remove:hover {
   color: #d50000;
+}
+
+li {
+  display: inline-block;
 }
